SwaggerUi2Application writing... (#59)
